Remove available memory from i3 status

--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -63,7 +63,7 @@ battery all {
 }
 
 memory {
-        format = "%used of %available"
+        format = "%used"
         #threshold_degraded = "1G"
         format_degraded = "MEMORY < %available"
 }
