--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -30,7 +30,7 @@ bind -n S-C-Left swap-window -t -1 \; previous-window
 bind -n S-M-Left swap-pane -U
 bind -n S-M-Right swap-pane -D
 
-bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded."
+bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "tmux.conf reloaded."
 
 # prefix w              list
 # prefix alt + arrow    resize
