--- a/.config/i3/config
+++ b/.config/i3/config
@@ -45,10 +45,13 @@ bindsym $mod+z exec --no-startup-id morc_menu
 ################################################################################################
 
 exec --no-startup-id volumeicon
-##bindsym $mod+Ctrl+m exec terminal -e 'alsamixer'
-exec --no-startup-id start-pulseaudio-x11
-exec --no-startup-id pa-applet
-bindsym $mod+Ctrl+m exec pavucontrol
+#exec --no-startup-id start-pulseaudio-x11
+#exec --no-startup-id pa-applet
+
+exec --no-startup-id "pactl set-default-sink alsa_output.pci-0000_07_00.6.HiFi__hw_Generic_1__sink"
+bindsym XF86AudioRaiseVolume exec "pactl -- set-sink-volume @DEFAULT_SINK@ +5%"
+bindsym XF86AudioLowerVolume exec "pactl -- set-sink-volume @DEFAULT_SINK@ -5%"
+bindsym XF86AudioMute exec "pactl set-sink-mute @DEFAULT_SINK@ toggle"
 
 ################################################################################################
 
@@ -423,5 +426,3 @@ exec --no-startup-id copyq
 exec --no-startup-id slack
 
 assign [class="Slack"] $ws1
-assign [class="Firefox"] $ws2
-# assign [class="code-oss"] $ws3
