Fix waybar style

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -2,8 +2,7 @@
   "layer": "top",
   "position": "bottom",
   "modules-left": [
-    "sway/workspaces",
-    "custom/right-arrow-dark"
+    "sway/workspaces"
   ],
   "modules-center": [
     "sway/mode"
