Fix alacritty config

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -27,7 +27,7 @@ colors:
     focused_match:
       foreground: '#000000'
       background: '#ffff66'
-    colors.footer.bar:
+  footer_bar:
       background: '#434c5e'
       foreground: '#d8dee9'
 
