--- a/.config/sway/config
+++ b/.config/sway/config
@@ -50,8 +50,7 @@ set $mod Mod4
   bindsym $mod+z exec --no-startup-id morc_menu
 
 
-  # Font for window titles. Will also be used by the bar unless a different font
-  # is used in the bar {} block below.
+  # Font for window titles
   font xft:URWGothic-Book 11
 
   # Configure border style <normal|1pixel|pixel xx|none|pixel>
@@ -385,7 +384,7 @@ exec "rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob"
   exec --no-startup-id slack
   assign [class="Slack"] $ws1
 
-  bindsym $mod+Shift+x exec swaylock -c 000000 --fade-in 0.2 --grace 2 --ignore-empty-password --clock
+  bindsym $mod+Shift+x exec swaylock -c 000000 --fade-in 0.2 --ignore-empty-password --clock
 
 #####################################
 
