--- a/.config/sway/config
+++ b/.config/sway/config
@@ -73,7 +73,7 @@ exec "rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob"
 ## sound
 #####################################
 
-  exec --no-startup-id "pactl set-default-sink alsa_output.pci-0000_07_00.6.HiFi__hw_Generic_1__sink"
+  exec_always --no-startup-id "pactl set-default-sink alsa_output.pci-0000_07_00.6.HiFi__hw_Generic_1__sink"
 
   bindsym XF86AudioRaiseVolume exec "pactl -- set-sink-volume @DEFAULT_SINK@ +5% && pactl get-sink-volume @DEFAULT_SINK@ | head -n 1 | awk '{print substr($5, 1, length($5)-1)}' > $WOBSOCK"
   bindsym XF86AudioLowerVolume exec "pactl -- set-sink-volume @DEFAULT_SINK@ -5% && pactl get-sink-volume @DEFAULT_SINK@ | head -n 1 | awk '{print substr($5, 1, length($5)-1)}' > $WOBSOCK"
