--- a/.config/swaylock/config
+++ b/.config/swaylock/config
@@ -1,10 +1,10 @@
 color=000000
-fade-in=0.2
+#fade-in=0.2
 
 indicator-radius=70
 indicator-thickness=6
 
-indicator
+#indicator
 indicator-caps-lock
 ignore-empty-password
-clock
+#clock
